<?xml version="1.0"?>
<package format="3">
  <name>creste_realtime</name>
  <version>0.0.1</version>
  <description>
    A ROS2 package for the Creste realtime node, including integration with Torch, OpenCV, PCL, etc.
  </description>
  <maintainer email="arthurz@cs.utexas.edu">Arthur K. Zhang</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime & build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>amrl_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Exporting the build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
